modified:   Python/algorithms.ipynb

--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -22,7 +22,26 @@
     "        if guess2 == False:\n",
     "            low = mid + 1\n",
     "        else:\n",
-    "            high = mid - 1"
+    "            high = mid - 1\n",
+    "#_____________________________\n",
+    "iscemo = 4562\n",
+    "list = [*range(100000)]\n",
+    "\n",
+    "low = 0\n",
+    "high = len(list) - 1\n",
+    "\n",
+    "while low <= high:\n",
+    "    mid = (low + high) // 2\n",
+    "\n",
+    "    guess = list[mid]\n",
+    "    \n",
+    "    if guess == iscemo:\n",
+    "        print(guess, mid)\n",
+    "    if guess > iscemo:\n",
+    "        high = mid - 1\n",
+    "    else:\n",
+    "        low = mid +1\n",
+    "#==============================="
    ]
   }
  ],
