modified:   Python/algorithms.ipynb

--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -46,10 +46,21 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "8f9328efe3468e6c370cdfed98702d3986faf748314d5bcec59da615d65baa7a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
