--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -41,7 +41,16 @@
     "        high = mid - 1\n",
     "    else:\n",
     "        low = mid +1\n",
-    "#==============================="
+    "#===============================\n",
+    "\n",
+    "#Given an array, rotate the array to the right by k steps, where k is non-negative.\n",
+    "#vedno je bilo treba od vzad zacet?\n",
+    "        dolzina = len(nums)\n",
+    "        \n",
+    "        prestavitev = int(k/ dolzina)\n",
+    "        zasuk_seznama = k - (prestavitev * dolzina)\n",
+    "        \n",
+    "        nums[:] = nums[-zasuk_seznama:] + nums[:-zasuk_seznama]"
    ]
   }
  ],
