--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -42,7 +42,7 @@
     "    else:\n",
     "        low = mid +1\n",
     "#===============================\n",
-    "\n",
+    "#LIST SLICING\n",
     "#Given an array, rotate the array to the right by k steps, where k is non-negative.\n",
     "#vedno je bilo treba od vzad zacet?\n",
     "        dolzina = len(nums)\n",
