--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nums' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/e/useful/Python/algorithms.ipynb Cell 1\u001b[0m in \u001b[0;36m<cell line: 25>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=34'>35</a>\u001b[0m         low \u001b[39m=\u001b[39m mid \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=35'>36</a>\u001b[0m \u001b[39m#===============================\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=36'>37</a>\u001b[0m \u001b[39m#LIST SLICING\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=37'>38</a>\u001b[0m \u001b[39m#Given an array, rotate the array to the right by k steps, where k is non-negative.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=38'>39</a>\u001b[0m \u001b[39m#vedno je bilo treba od vzad zacet?\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=39'>40</a>\u001b[0m         dolzina \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(nums)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=41'>42</a>\u001b[0m         prestavitev \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(k\u001b[39m/\u001b[39m dolzina)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/e/useful/Python/algorithms.ipynb#ch0000000?line=42'>43</a>\u001b[0m         zasuk_seznama \u001b[39m=\u001b[39m k \u001b[39m-\u001b[39m (prestavitev \u001b[39m*\u001b[39m dolzina)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nums' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# binary search\n",
     "\n",
@@ -52,6 +64,23 @@
     "        \n",
     "        nums[:] = nums[-zasuk_seznama:] + nums[:-zasuk_seznama]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxSubArray(nums):\n",
+    "    minimum = 0\n",
+    "    maximum = nums[0]\n",
+    "    \n",
+    "    for i in range(len(nums)):\n",
+    "        minimum = max(nums[i], minimum + nums[i])\n",
+    "        maximum = max(minimum, maximum)\n",
+    "    \n",
+    "    return maximum"
+   ]
   }
  ],
  "metadata": {
@@ -61,8 +90,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
