--- a/Python/algorithms.ipynb
+++ b/Python/algorithms.ipynb
@@ -81,6 +81,24 @@
     "    \n",
     "    return maximum"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 5\n",
+    "\n",
+    "def countdown(stevilka):\n",
+    "    print(stevilka)\n",
+    "    if stevilka <= 0:\n",
+    "        return\n",
+    "    else:\n",
+    "        countdown(stevilka-1)\n",
+    "\n",
+    "countdown(i)"
+   ]
   }
  ],
  "metadata": {
